--- a/assets/home.css
+++ b/assets/home.css
@@ -15,11 +15,16 @@ h1 {
     font-size: 100%;
     vertical-align: baseline;
 }
+@font-face {
+    font-family: 'Fredoka';
+    src: url('fonts/FredokaOne-Regular.ttf');
+}
 body{
     background-color: #121212;
 }
 input[type="checkbox"]{
-    display:none
+    display:none;
+    margin-top: 20px;
 }
 
 input[type="checkbox"]:checked ~ nav{
@@ -27,9 +32,7 @@ input[type="checkbox"]:checked ~ nav{
 }
 
 input[type="checkbox"]:checked ~ label>img{
-    transform: translateX(260px);
-    margin-right: 30px;
-    margin-top: 20px;
+    transform: translateX(250px);
 
 }
 
@@ -38,10 +41,12 @@ label>img{
   position: absolute;
   z-index: 1;
   transition: all 0.5s;
+  margin-top: 25px;
+  margin-left: 0px;
 }
 
 nav{
-    background-color: rgba(31, 31, 31, 0.5);
+    background-color: rgb(31, 31, 31);
     width:300px;  
     height: 100%; 
     position: absolute;  
@@ -62,11 +67,11 @@ nav>ul>li>a{
     color:#FFF;
     text-decoration: none;
     font-family: sans-serif;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 nav>ul>li>a:hover{
-    background-color: rgba(18,18,18,.5);
+    background-color: rgb(18, 18, 18);
     color:#8224AE;
 }
 .logo{
@@ -77,4 +82,91 @@ nav>ul>li>a:hover{
 }
 .img-logo{
     width:100%
+}
+.linha{
+    width: 100%;
+    height: 1px;
+    background-color: #8B8B8B;
+    margin-top: 330px;
+}
+.account{
+    display: flex;
+}
+.perfil{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin-top: 10px;
+    margin-left: 25px;
+}
+.account span{
+    color: #FFF;
+    margin-top: 30px;
+    margin-left: 10px;
+    font-family: sans-serif;
+    font-size: 16px;
+}
+.header{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    border-bottom: 1.5px solid #8224AE;
+}
+.logo-principal{
+    width: 12.5%;
+    margin-top: 5px;
+    margin-left: 50px;
+}
+.img-principal{
+    width:100%;
+}
+.lado-direito{
+    float: right;
+    width: 83%;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+} 
+.conteudo-header{
+    margin-right: 20px;
+    display: flex;
+    column-gap: 50px;
+    font-family: sans-serif;
+}
+.search{
+    width: 300px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    background-color: #2d2d2d;
+}
+.link{
+    text-decoration: none;
+    color: #8224AE;
+    font-weight: bold;
+    font-family: "Fredoka";
+}
+h2{
+    margin-top: 100px;
+    color: #666666;
+    align-self: center;
+    font-family: "Fredoka";
+    
+}
+main{
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.box-comunidades{
+    display: flex;
+    background-color: #8224AE;
+    width: 90%;
+    align-self: center;
+    height: 200px;
+}
+.comunidades{
+    border: 1px solid #666666;
 }
