--- a/assets/cadastro.css
+++ b/assets/cadastro.css
@@ -15,7 +15,7 @@ header{
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 0, 0, 0);
-    border-bottom: 2px solid rgb(62, 17, 73);
+    border-bottom: 2px solid rgba(171, 3, 193, 0.234);
 }
 .logo{
     width: 180px;
@@ -23,7 +23,7 @@ header{
 }
 body {
     /* background-image: url("img/fundo-degrade02.jpg"); */
-    background: linear-gradient(45deg, #500373, #631386, #731e98, #7a04ac);
+    background: linear-gradient(180deg, #000000, #270137, #891fb7, #9345b4);
     background-size: 250% 250%;
     animation: colors 8s ease infinite;
 }
@@ -38,24 +38,38 @@ body {
      background-position: 0% 50%;
     } 
 }
-form{
-    width: 30%;
-    height: 400px;
+.cadastro-container{
+    width: 50%;
+    height: 470px;
     padding: 30px;
-    background-color: rgba(32, 32, 32, 0.214);
+    background-color: rgba(32, 32, 32, 0.23);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 10px;
+    margin-top: 100px;
+}
+.form-left, .form-right{
+    width: 50%;
+    height: 320px;
+    margin-bottom: 160px;
+
+}
+form{
+    width: 100%;
+    height: 250px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    margin-top: 100px;
+    margin-top: 80px;
 
 }
-form h1{
-    margin-bottom: 30px;
-    color: #34004a;
-    font-size: 20px;
-}
+input::placeholder {
+    color: rgb(53, 53, 53);
+  }
 .form-group {
     width: 100%;
     margin-bottom: 15px;
@@ -64,7 +78,7 @@ form h1{
 
 .form-group input {
     height: 40px;
-    width: 100%;
+    width: 350px;
     margin-bottom: 15px;
     padding: 10px;
     border-radius: 5px;
@@ -73,35 +87,36 @@ form h1{
     background-color: rgba(255, 255, 255, 0.348);
 }
 
-.login-btn {
-    width: 100%;
+.cadastro-btn {
+    width: 25%;
     padding: 10px;
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: -110px;
     border: none;
     background: linear-gradient(to right, rgba(66, 15, 87, 0.988),  rgba(66, 15, 87, 0.988)); 
     color: white;
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    
 }
 
-.login-btn:hover {
+.cadastro-btn:hover {
     background: linear-gradient(to right, rgba(55, 2, 79, 0.5), rgba(90, 4, 121, 0.5), rgba(138, 8, 185, 0.5)); 
 }
-.esqueci-senha{
-    text-align: end;
-    font-size: 15px;
-    margin-top: -10px;
-    color: #d2d2d2;
+.label{
+    color: white;
+    
 }
-.aviso-cadastro{
-    width: 100%;
-    margin-top: 5px;
-    font-size: 16px;
-    color: #d2d2d2;
+.text-roxo{
+    color: #a72bee;
 }
-.cadastrar-roxo a{
-    color: #cc55ff;
-    text-decoration: none;
+.check{
+    width: 25%;
+    margin-top: 10px;
+}
+a{
+    color: rgba(66, 15, 87, 0.988);
 }
