--- a/assets/postagem.css
+++ b/assets/postagem.css
@@ -15,6 +15,9 @@ h1 {
     font-size: 100%;
     vertical-align: baseline;
 }
+html{
+    scroll-behavior: smooth;
+}
 @font-face {
     font-family: 'Fredoka';
     src: url('fonts/FredokaOne-Regular.ttf');
@@ -43,10 +46,10 @@ input[type="checkbox"]:checked ~ label>img{
 label>img{
   width: 40px;  
   position: absolute;
-  z-index: 1;
   transition: all 0.5s;
   margin-top: 25px;
   margin-left: 0px;
+  z-index: 5;
 }
 
 .nav-vertical{
@@ -56,6 +59,7 @@ label>img{
     position: absolute;  
     left: -300px;
     transition: all 0.5s;
+    z-index: 4;
 }
 
 .nav-vertical>ul{
@@ -115,6 +119,8 @@ label>img{
     width: 100%;
     height: 100px;
     border-bottom: 1.5px solid #383838;
+    background-color: #121212;
+    z-index: 3;
 }
 .logo-principal{
     width: 12.5%;
@@ -154,19 +160,23 @@ label>img{
 .principal{
     width: 100%;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0px;
 }
 .titulo{
     display: flex;
     width: 100%;
     text-align: center;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    background-color: #121212;
+    height: 100px;
+    position: relative;
+
 }
 .linha-pag{
-    background-color:#8224AE;
-    height: 1px;
+    height:1px;
     width: 40%;
+    background-color: #8224AE;
 }
 h2{
     color: #7C25AE;
@@ -183,7 +193,24 @@ h2{
     display: flex;
     flex-direction: column;
     text-align: left;
+    height: 530px;
     border-radius: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    scroll-behavior: smooth;
+    z-index: 1;
+}
+.box-info2{
+    background-color: rgb(0, 0, 0);
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    height: 530px;
 }
 .timeline{
     width: 40%;
@@ -242,13 +269,7 @@ h2{
     border: none;
     font-weight: bold;  
 }
-.box-info2{
-    background-color: rgb(0, 0, 0);
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-}
+
 
 
 .conta{
@@ -302,4 +323,9 @@ h2{
 }
 .postagem{
     margin-bottom: 100px;
+}
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
