--- a/assets/home.css
+++ b/assets/home.css
@@ -24,11 +24,11 @@ h1 {
     src: url('fonts/BeVietnamPro-ExtraLight.ttf');
 }
 body{
-    background-color: #121212;
+    background-color: #2d2f3b;
 }
 input[type="checkbox"]{
     display:none;
-    margin-top: 20px;
+    margin-top: 20px;   
 }
 
 input[type="checkbox"]:checked ~ nav{
@@ -114,7 +114,7 @@ nav>ul>li>a:hover{
     display: flex;
     width: 100%;
     height: 100px;
-    border-bottom: 1.5px solid #383838;
+    border-bottom: 1.5px solid #3a3c4b;
 }
 .logo-principal{
     width: 12.5%;
@@ -143,7 +143,7 @@ nav>ul>li>a:hover{
     padding: 5px;
     border-radius: 5px;
     border: none;
-    background-color: #2d2d2d;
+    background-color: #3b3e4f;
 }
 .link{
     text-decoration: none;
@@ -153,7 +153,7 @@ nav>ul>li>a:hover{
 }
 h2{
     margin-top: 100px;
-    color: #666666;
+    color: #8224AE  ;
     align-self: center;
     font-family: "Fredoka";
     margin-left: 41.5%;
@@ -173,7 +173,7 @@ main{
     column-gap: 30px;
 }
 .comunidades{
-    border: 2px solid #424242;
+    border: 2px solid #404352;
     width: 23.75%;
     border-radius: 10px;
     align-items: center;
@@ -209,7 +209,7 @@ h3{
     margin-bottom: 100px;
 }
 .novidade{
-    background-color: #292929;
+    background-color: #353845;
     width: 30%;
     height: 350px;
     border-radius: 10px;
@@ -241,7 +241,7 @@ h3{
     color: white;
 }
 .rodape{
-    background-color: #000000;
+    background-color: #1f1f29;
     display: flex;
     width: 100%;
     justify-content: space-between;
