--- a/assets/sncinema.css
+++ b/assets/sncinema.css
@@ -1,15 +1,25 @@
 *{
     margin: 0 auto;
-    background-color: #121212;
+  
+}
+body{
+    background-color: #2D2F3B;
+    font-family: 'Vietnam';
+}
+@font-face {
+    font-family: 'Fredoka';
+    src: url('fonts/FredokaOne-Regular.ttf');
+}
+@font-face {
+    font-family: 'Vietnam';
+    src: url('fonts/BeVietnamPro-ExtraLight.ttf');
 }
 .box-title{
     background-color: #8224AE;
     width: 33.33%;
     height: 3px;  
 }
-.title{
-    font-size: 30px;
-}
+
 .box-title-total{
     width: 100%;
     height: 3px;
@@ -25,24 +35,18 @@
     justify-content: center; 
     align-items: center; 
     text-align: center; 
+    font-size: 30px;
+    font-family: 'Fredoka';
+}
 
-}
-.text-body{
-    color:white;
-    margin-top: 15px;
-}
-.title-body{
-    color:#8224AE;
-   
-}
-.title-body li {
-    margin-bottom: 20px;
-}
-.all-text-body{
-    text-align: justify;
+.all-text{
     width: 80%;
-    justify-content: center;
-    align-items: center;
+    text-align: justify;
+    margin-top: 100px;
+    color: white;
+}
+
+.text{
     margin-top: 20px;
 }
 
@@ -54,7 +58,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 270px;
+    background-color: #1F1F29;
 }
 .info{
     display: flex;
@@ -85,5 +90,3 @@
 .info-2 span i {
     margin-right: 15px; 
 }
-
-
