--- a/assets/postagem.css
+++ b/assets/postagem.css
@@ -27,7 +27,7 @@ html{
     src: url('fonts/BeVietnamPro-ExtraLight.ttf');
 }
 body{
-    background-color: #121212;
+    background-color: #2d2f3b;
 }
 input[type="checkbox"]{
     display:none;
@@ -119,7 +119,7 @@ label>img{
     width: 100%;
     height: 100px;
     border-bottom: 1.5px solid #383838;
-    background-color: #121212;
+    background-color: #2d2f3b;
     z-index: 3;
 }
 .logo-principal{
@@ -149,7 +149,7 @@ label>img{
     padding: 5px;
     border-radius: 5px;
     border: none;
-    background-color: #2d2d2d;
+    background-color: #3b3e4f;
 }
 .link{
     text-decoration: none;
@@ -168,7 +168,7 @@ label>img{
     text-align: center;
     align-items: center;
     justify-content: space-between;
-    background-color: #121212;
+    background-color: #2d2f3b;
     height: 100px;
     position: relative;
 
@@ -188,7 +188,7 @@ h2{
     margin-top: 50px;
 }
 .box-info{
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -202,7 +202,7 @@ h2{
     z-index: 1;
 }
 .box-info2{
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     width: 20%;
     display: flex;
     justify-content: center;
@@ -226,7 +226,7 @@ h2{
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: 17px;
-    color: #646464;
+    color: #939393;
     font-family: "Vietnam";
     font-weight: bold;
 }
@@ -234,7 +234,7 @@ h2{
     margin-top: 250px;
     margin-top: 20px;
     font-size: 17px;
-    color: #646464;
+    color: #c5c5c5;
     margin-left: 15%;
 
     font-family: "Vietnam";
@@ -254,17 +254,17 @@ h2{
     margin-top: 40px;
     width: 210px;
     background: none;
-    color: #646464;
+    color: #939393;
     border: none;
     border-radius: 2px;
     padding: 9px 9px;
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     font-family: "Vietnam";
     font-size: 17px;
     font-weight: bold;
 }
 .header-nav option {
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     color: white;
     border: none;
     font-weight: bold;  
@@ -283,17 +283,17 @@ h2{
     width: 60px;
 }
 .conta>span{
-    color: #787878;
+    color: #939393;
     font-weight: bold;
     margin-left: 10px;
     font-family: "Vietnam";
 }
 .publicacao{
     width: 90%;
-    background-color: #1F1F1F;
+    background-color: #3b404f;
     margin-top: 20px;
     height: 50px;
-    color:#acacac;
+    color:#ffffff;
     font-family: "Vietnam";
     font-size: 15px;
     border-radius: 5px;
@@ -317,12 +317,14 @@ h2{
     margin-left: 25px;
     margin-top: 20px;
     display: flex;
+    margin-bottom: 40px;
 }
 .icons-post>i{
     margin-right: 10px;
 }
 .postagem{
     margin-bottom: 100px;
+    border-bottom: 1px solid #939393;
 }
 .sticky{
     position: fixed;
