--- a/assets/genero.css
+++ b/assets/genero.css
@@ -27,7 +27,7 @@ html{
     src: url('fonts/BeVietnamPro-ExtraLight.ttf');
 }
 body{
-    background-color: #121212;
+    background-color: #2d2f3b;
 }
 input[type="checkbox"]{
     display:none;
@@ -53,7 +53,7 @@ label>img{
 }
 
 .nav-vertical{
-    background-color: rgb(31, 31, 31);
+    background-color: #2d2f3b;;
     width:300px;  
     height: 100%; 
     position: absolute;  
@@ -79,7 +79,7 @@ label>img{
 }
 
 .nav-vertical>ul>li>a:hover{
-    background-color: rgb(18, 18, 18);
+    background-color: #2d2f3b;
     color:#8224AE;
 }
 .logo{
@@ -119,7 +119,7 @@ label>img{
     width: 100%;
     height: 100px;
     border-bottom: 1.5px solid #383838;
-    background-color: #121212;
+    background-color: #22252D;
     z-index: 3;
 }
 .logo-principal{
@@ -168,7 +168,7 @@ label>img{
     text-align: center;
     align-items: center;
     justify-content: space-between;
-    background-color: #121212;
+    background-color: #2d2f3b;
     height: 100px;
     position: relative;
 
@@ -188,7 +188,7 @@ h2{
     margin-top: 50px;
 }
 .box-info{
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -202,7 +202,7 @@ h2{
     z-index: 1;
 }
 .box-info2{
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     width: 20%;
     display: flex;
     justify-content: center;
@@ -258,13 +258,13 @@ h2{
     border: none;
     border-radius: 2px;
     padding: 9px 9px;
-    background-color: rgb(0, 0, 0);
+    background-color: #2d2f3b;
     font-family: "Vietnam";
     font-size: 17px;
     font-weight: bold;
 }
 .header-nav option {
-    background-color: rgb(0, 0, 0);
+    background-color: #2d2f3b;
     color: white;
     border: none;
     font-weight: bold;  
