--- a/assets/postagem.css
+++ b/assets/postagem.css
@@ -119,7 +119,7 @@ label>img{
     width: 100%;
     height: 100px;
     border-bottom: 1.5px solid #383838;
-    background-color: #2d2f3b;
+    background-color: #22252D;
     z-index: 3;
 }
 .logo-principal{
