--- a/assets/teladenuncias.css
+++ b/assets/teladenuncias.css
@@ -110,7 +110,7 @@ label>img{
     width: 100%;
     height: 100px;
     border-bottom: 1.5px solid #383838;
-    background-color: #2D2F3B;
+    background-color: #22252D;
     z-index: 3;
 }
 .logo-principal{
