--- a/assets/eventos.css
+++ b/assets/eventos.css
@@ -118,8 +118,8 @@ label>img{
     display: flex;
     width: 100%;
     height: 100px;
-    border-bottom: 1.5px solid #22252d;
-    background-color: #2d2f3b;
+    border-bottom: 1.5px solid #383838;
+    background-color: #22252d;
     z-index: 3;
 }
 .logo-principal{
@@ -215,7 +215,10 @@ h2{
 .timeline{
     width: 40%;
     margin: 0 auto;
-
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .link-postagens>i{
     margin-left: 15%;
@@ -270,64 +273,29 @@ h2{
     font-weight: bold;  
 }
 
-
-
-.conta{
-    display: flex;
-    margin-top: 40px;
-    align-items: center;
-    margin-left: 25px;
-}
-.perfil-post{
-    border-radius: 50%;
-    width: 60px;
-}
-.conta>span{
-    color: #939393;
-    font-weight: bold;
-    margin-left: 10px;
-    font-family: "Vietnam";
-}
-.publicacao{
-    width: 90%;
-    background-color: #3b404f;
-    margin-top: 20px;
-    height: 50px;
-    color:#ffffff;
-    font-family: "Vietnam";
-    font-size: 15px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center ;
-    padding: 10px;
-    margin-left: 25px;
-}
-.img-post>img{
-    width: 90%;
-    border-radius: 15px;
-    margin-top: 20px;
-}
-
-.icons-post{
-    color: #FFF;
-    font-size: 30px;
-    align-items: center;
-    justify-content: left;
-    display: flex;
-    margin-left: 25px;
-    margin-top: 20px;
-    display: flex;
-    margin-bottom: 40px;
-}
-.icons-post>i{
-    margin-right: 10px;
-}
-.postagem{
-    margin-bottom: 100px;
-    border-bottom: 1px solid #939393;
-}
 .sticky{
     position: fixed;
     top: 0;
     width: 100%;
+}
+
+/* Aqui começa o evento */
+
+.eventos{
+    background-color: #474d5e;
+    width: 80%;
+    align-self: center;
+    height: 300px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+.img-evento{
+    width: 100%;
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 20px;
+}
+.span-evento{
+    color: #FFF;
+    font-family: "Vietnam";
+    
 }
