--- a/assets/suporte.css
+++ b/assets/suporte.css
@@ -1,10 +1,9 @@
 *{
     margin: 0 auto;
-  
+    font-family: 'Vietnam';
 }
 body{
     background-color: #2D2F3B;
-    font-family: 'Vietnam';
 }
 @font-face {
     font-family: 'Fredoka';
@@ -39,7 +38,7 @@ label>img{
 }
 
 .nav-vertical{
-    background-color: rgb(31, 31, 31);
+    background-color: #292929;
     width:300px;  
     height: 100%; 
     position: absolute;  
@@ -81,10 +80,11 @@ label>img{
     width: 100%;
     height: 1px;
     background-color: #8B8B8B;
-    margin-top: 380px;
+    margin-top: 390px;
 }
 .account{
     display: flex;
+    margin-top: 10px;
 }
 .perfil{
     width: 50px;
@@ -96,7 +96,7 @@ label>img{
 .account span{
     color: #FFF;
     margin-top: 30px;
-    margin-left: 10px;
+    margin-right: 160px;
     font-family: sans-serif;
     font-size: 16px;
 }
@@ -141,7 +141,6 @@ label>img{
     text-decoration: none;
     color: #8224AE;
     font-weight: bold;
-    font-family: "Fredoka";
 }
 .titulo{
     display: flex;
@@ -153,8 +152,9 @@ label>img{
     height: 100px;
     position: relative;
     color: #8224AE;
-
-
+}
+.titulo h2{
+    font-size: 30px;
 }
 .linha-pag{
     height:1px;
@@ -191,12 +191,6 @@ label>img{
 .text-body-box{
     color:white;
 }
-.linha{
-    width: 100%;
-    height: 2px;
-    background-color: #6B6B6B;
-    margin-top: 20px;
-}
 .info-title {
     font-size: 25px;
     color: white;
@@ -227,7 +221,7 @@ label>img{
 .contato {
     width: 80%;  
     text-align: left; /* Alinha o conteúdo à esquerda */
-    margin-top: 12px;
+    margin-top: 60px;
    
 }
 
@@ -259,6 +253,7 @@ label>img{
 
 .info span{
     margin-top: 5px;
+    font-size: 12px;
 }
 
 .info-2 span {
@@ -275,3 +270,29 @@ label>img{
 .title{
     font-size: 30px;
 }
+.collapsible {
+    background-color: #73018d;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-top: 25px;
+
+
+  }
+  
+  .active, .collapsible:hover {
+    background-color: #9b49c1;
+  }
+  
+  .content {
+    padding: 20px;
+    display: none;
+    overflow: hidden;
+    background-color: #2D2F3B;
+    margin-bottom: 15px;
+  }
