Home com parallax

--- a/assets/home.css
+++ b/assets/home.css
@@ -285,7 +285,7 @@ i{
     opacity: 0.5;
 }
 #img02{
-    background-image: url(img/img02-parallax\ \(2\).png);
+    background-image: url(img/img02222-parallax.jpg);
     opacity: 0.5;
 }
 #img03{
