--- a/assets/maisComentadosCinema.css
+++ b/assets/maisComentadosCinema.css
@@ -280,8 +280,9 @@ h2{
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    gap:10px
+   align-items: center;
+    gap:10px;
+    margin-top: 20px;
 }
 .text{
     background-color: rgba(171, 171, 171, 0.334);
