--- a/assets/novidades.css
+++ b/assets/novidades.css
@@ -28,7 +28,6 @@ html{
 }
 body{
     background-color: #2d2f3b;
-    font-family: "Vietnam";
 }
 input[type="checkbox"]{
     display:none;
@@ -54,7 +53,7 @@ label>img{
 }
 
 .nav-vertical{
-    background-color: #292929;
+    background-color: rgb(31, 31, 31);
     width:300px;  
     height: 100%; 
     position: absolute;  
@@ -80,7 +79,7 @@ label>img{
 }
 
 .nav-vertical>ul>li>a:hover{
-    background-color: #292929;
+    background-color: rgb(18, 18, 18);
     color:#8224AE;
 }
 .logo{
@@ -95,7 +94,7 @@ label>img{
 .linha{
     width: 100%;
     height: 1px;
-    background-color: #a4a4a4;
+    background-color: #8B8B8B;
     margin-top: 380px;
 }
 .account{
@@ -150,13 +149,13 @@ label>img{
     padding: 5px;
     border-radius: 5px;
     border: none;
-    background-color: #2d2d2d;
+    background-color: #3b3e4f;
 }
 .link{
     text-decoration: none;
     color: #8224AE;
     font-weight: bold;
-
+    font-family: "Fredoka";
 }
 .principal{
     width: 100%;
@@ -181,6 +180,7 @@ label>img{
 }
 h2{
     color: #7C25AE;
+    font-family: "Fredoka";
     font-size: 22px;
 }
 .box-tudo{
@@ -215,7 +215,10 @@ h2{
 .timeline{
     width: 40%;
     margin: 0 auto;
-
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .link-postagens>i{
     margin-left: 15%;
@@ -234,7 +237,7 @@ h2{
     margin-top: 250px;
     margin-top: 20px;
     font-size: 17px;
-    color: #646464;
+    color: #c5c5c5;
     margin-left: 15%;
 
     font-family: "Vietnam";
@@ -264,64 +267,38 @@ h2{
     font-weight: bold;
 }
 .header-nav option {
-    background-color: rgb(0, 0, 0);
+    background-color: #262932;
     color: white;
     border: none;
     font-weight: bold;  
 }
 
-/* Aqui começa a postagem */
-
-.comentados{
-    width: 100%;
-    margin-top: 10px;
-}
-.boxTotal{
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap:10px;
-    margin-top: 20px;
-}
-.text{
-    background-color: rgba(171, 171, 171, 0.334);
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 10px;
-    border-radius: 10px;
-}
-.title{
-    font-size: 20px;
-    display: flex;
-    justify-content: flex-start;
-}
-.title span{
-    color: white;
-}
-.sinopse{
-    text-align: justify;
-}
-.sinopse span{
-    font-size: 14px;
-    color: white;
-}
-.star{
-    display: flex;
-    justify-content: flex-start;
-}
-.foto img{
-    width: 180px;
-    height: 265px;
-    border-radius: 5px;
-}
 .sticky{
     position: fixed;
     top: 0;
     width: 100%;
 }
-.mais{
-    color: #8224AE;
+
+/* Aqui começa o evento */
+
+.eventos{
+    background-color: #474d5e;
+    width: 80%;
+    align-self: center;
+    height: 300px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+.img-evento{
+    width: 100%;
+    height: 230px;
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 20px;
+    object-fit: cover;
+   
+}
+.span-evento{
+    color: #FFF;
+    font-family: "Vietnam";
+    
 }
