--- a/assets/teladenuncias.css
+++ b/assets/teladenuncias.css
@@ -303,6 +303,7 @@ label>img{
 .info-box span {
     margin-top: 5px;
     color: #737373;
+    font-size: 12px;
 }
 
 .info-2 span {
@@ -311,6 +312,7 @@ label>img{
     text-align: left;
     margin-top: 10px;
     color: #737373;
+    font-size: 12px;
 }
 
 .info-2 span i {
